manifests/showks-canvas-demoaccount-8/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-demoaccount-8
  namespace: showks
  labels:
    app: showks-canvas-demoaccount-8
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-demoaccount-8

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-demoaccount-8
  namespace: showks
  labels:
    app: showks-canvas-demoaccount-8
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-demoaccount-8
  template:
    metadata:
      labels:
        app: showks-canvas-demoaccount-8
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-demoaccount-8
          image: gcr.io/ipc-containerdays/showks-canvas-demoaccount-8:prod-419e76008267d38d3cb6e2931d9b5b38020e7846
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-demoaccount-8
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-canvas-demoaccount-8"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - showks-canvas-demoaccount-8.prod.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: showks-canvas-demoaccount-8.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-demoaccount-8
          servicePort: 8080
